syntax = "proto3";

package common;

option go_package = "build/common";
import "protos/global/global.proto";

message Department {
  // 部门id
  string deptId = 1;  // @gotags: `gorm:"primary_key;<-:create"`
  // 父部门id true
  string parentId = 2;  // @gotags: `valid:"required"`
  // 部门名称
  string deptName = 3;  // @gotags: `valid:"required"`
  // 组织或机构
  string orgId = 4;  // @gotags: `valid:"required"`
  // 部门树
  string tree = 5;
  // 负责人
  string leader = 6;  // @gotags: `valid:"required"`
  // 联系电话
  string phone = 7;  // @gotags: `valid:"required"`
  // 邮箱
  string email = 8;  // @gotags: `valid:"required"`
  // 排序
  int64 sortBy = 9;
  // 状态（1正常 0停用）
  int64 status = 10;  // @gotags: `minimum:"0" maximum:"1" default:"1" json:"status,number"`
  // 删除状态
  bool delStatus = 11;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 12;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 13;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 14;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 15;  // @gotags: gorm:"->" swaggerignore:"true"
  // 子集菜单
  repeated Department children = 16;  // @gotags `json:"children" gorm:"-"`
}

message DepartmentParam {
  // 部门名称
  string deptName = 1;
  // 负责人
  string leader = 2;
  // 联系电话
  string phone = 3;
  // 邮箱
  string email = 4;
}

message DepartmentListVo {
  // 部门id
  string deptId = 1;
  // 部门名称
  string deptName = 2;
  // 部门图标
  string ancestors = 3;
  // 部门介绍
  string introduce = 4;
}

message DepartmentIds {
  repeated string deptIds = 1;
  string userId = 2;
}

// 分页查询加权参数
message DepartmentPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;  // @gotags: validate:"required,min=1" example:"1"`
  // 分页长度
  int64 pageSize = 2;  // @gotags: validate:"required,min=10,max=100" example:"10"`
  // 查询参数
  DepartmentParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message DepartmentResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  Department detail = 3;  // 详情
  repeated Department list = 4;  // 列表
}

// 业务实现
service DepartmentService {
  // 新增部门
  rpc Create(Department) returns (DepartmentResponse);

  // 修改部门
  rpc Update(Department) returns (DepartmentResponse);

  // 查询部门
  rpc Delete(DepartmentIds) returns (DepartmentResponse);

  // 查询部门详情
  rpc FindById(DepartmentIds) returns (DepartmentResponse);

  // 查询部门数据
  rpc FindTree(global.Auth) returns (DepartmentResponse);
}
