syntax = "proto3";

package common;

option go_package = "build/common";
import "protos/global/global.proto";

// 字典
message Dict {
  // 字典id
  string dictId = 1;  //  @gotags: gorm:"primary_key;<-:create"
  // 父id(默认为1)
  string parentId = 2;
  // 字典名称
  string dictName = 3;
  // 字典解释/说明
  string dictValue = 4;  //  @gotags: validate:"required"
  // 字典解释/说明
  string description = 5;
  // 启用状态
  int64 Enable = 6;
  // 排序
  int64 sortBy = 7;
  // 删除状态
  bool delStatus = 8;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 9;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 10;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 11;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 17;  // @gotags: gorm:"->" swaggerignore:"true"
}

message DictParam {
}

message DictIds {
  // 字典id
  repeated string dictIds = 1;
  // 用户id
  string userId = 2;
  // id类型 1为字典id 2为字典parentId
  string parentId = 3;
}

// 分页查询加权参数
message DictPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  DictParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message DictResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  Dict detail = 3;  // 详情
  repeated Dict list = 4;  // 列表
}

// 业务实现
service DictService {
  // 新增字典
  rpc Create(Dict) returns (DictResponse);

  // 修改字典
  rpc Update(Dict) returns (DictResponse);

  // 修改字典
  rpc Delete(DictIds) returns (DictResponse);

  // 查询字典详情
  rpc FindById(DictIds) returns (DictResponse);

  // 查询字典列表
  rpc FindListByParentId(DictIds) returns (DictResponse);

  // 查询字典分页
  rpc FindPageList(DictPageAuthQuery) returns (DictResponse);
}
